Add(index): layout for each section components

--- a/index.html
+++ b/index.html
@@ -4,9 +4,44 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
         <title>Feature Section | Kyrkevsler</title>
     </head>
     <body>
-        
+        <main>
+            <div class="section">
+                <div class="section-headings">
+                    <h2>Reliable, efficient delivery</h2>
+                    <h2>Powered by Technology</h2>
+                </div>
+                <div class="section-description">
+                    <p>Our Artificial intelligence powered tools use millions of project
+                        data points to ensure that your project is successful
+                    </p>
+                </div>
+            </div>
+            <div class="card-components">
+                <div class="card-supervisor">
+                    <span>Supervisor</span>
+                    <p>Monitors activity to identify project roadblocks</p>
+                    <img src="./images/icon-supervisor.svg" alt="magnifying glass" class="supervisor-logo">
+                </div>
+                <div class="card-team">
+                    <span>Team Builder</span>
+                    <p>Scans our talent network to create the optimal team for your project</p>
+                    <img src="./images/icon-team-builder.svg" alt="house" class="team-logo">
+                </div>
+                <div class="card-karma">
+                    <span>Karma</span>
+                    <p>Regularly evaluates our talent to ensure quality</p>
+                    <img src="./images/icon-karma.svg" alt="light bulb" class="karma-logo">
+                </div>
+                <div class="card-calculator">
+                    <span>Calculator</span>
+                    <p>Uses data from past projects to provide better delivery estimates</p>
+                    <img src="./images/icon-calculator.svg" alt="computer" class="calculator-logo">
+                </div>
+            </div>
+        </main>     
     </body>
 </html>
