--- a/index.html
+++ b/index.html
@@ -11,35 +11,38 @@
         <main>
             <div class="section">
                 <div class="section-headings">
-                    <h2>Reliable, efficient delivery</h2>
+                    <span>Reliable, efficient delivery</span>
                     <h2>Powered by Technology</h2>
                 </div>
                 <div class="section-description">
-                    <p>Our Artificial intelligence powered tools use millions of project
+                    <p>Our Artificial intelligence powered tools use millions of project 
                         data points to ensure that your project is successful
-                    </p>
+                    </p>   
                 </div>
             </div>
             <div class="card-components">
-                <div class="card-supervisor">
-                    <span>Supervisor</span>
-                    <p>Monitors activity to identify project roadblocks</p>
-                    <img src="./images/icon-supervisor.svg" alt="magnifying glass" class="supervisor-logo">
+                <div class="card-row">
+                    <div class="card-supervisor">
+                        <span>Supervisor</span>
+                        <p>Monitors activity to identify project roadblocks</p>
+                        <img src="./images/icon-supervisor.svg" alt="magnifying glass" class="supervisor-logo">
+                    </div>
+                    <div class="card-calculator">
+                        <span>Calculator</span>
+                        <p>Uses data from past projects to provide better delivery estimates</p>
+                        <img src="./images/icon-calculator.svg" alt="computer" class="calculator-logo">
+                    </div>
                 </div>
-                <div class="card-team">
-                    <span>Team Builder</span>
-                    <p>Scans our talent network to create the optimal team for your project</p>
-                    <img src="./images/icon-team-builder.svg" alt="house" class="team-logo">
-                </div>
-                <div class="card-karma">
-                    <span>Karma</span>
-                    <p>Regularly evaluates our talent to ensure quality</p>
-                    <img src="./images/icon-karma.svg" alt="light bulb" class="karma-logo">
-                </div>
-                <div class="card-calculator">
-                    <span>Calculator</span>
-                    <p>Uses data from past projects to provide better delivery estimates</p>
-                    <img src="./images/icon-calculator.svg" alt="computer" class="calculator-logo">
+                <div class="card-column">
+                    <div class="card-team">
+                        <span>Team Builder</span>
+                        <p>Scans our talent network to create the optimal team for your project</p>
+                        <img src="./images/icon-team-builder.svg" alt="house" class="team-logo">
+                    </div>
+                    <div class="card-karma">
+                        <span>Karma</span>
+                        <p>Regularly evaluates our talent to ensure quality</p>
+                        <img src="./images/icon-karma.svg" alt="light bulb" class="karma-logo">
                 </div>
             </div>
         </main>     
